roles/openondemand-k8s/web-node/files/yaml/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "$NAMESPACE"
  labels:
    app.kubernetes.io/name: open-ondemand
  annotations:
    openondemand.org/last-hook-execution: "$TIMESTAMP"
